--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,26 +10,16 @@ env:
 jobs:
   build-and-push:
     runs-on: ubuntu-latest
-
+    env:
+      IMAGE_NAME: kelomi44/weddinglite
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v3
-
-      - name: Log in to DockerHub
-        uses: docker/login-action@v3
-        with:
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_TOKEN }}
-
-      - name: Build and push Docker image
-        run: |
-          docker build -t $IMAGE_NAME:latest .
-          docker push $IMAGE_NAME:latest
+      # build & push steps here...
 
   deploy:
     runs-on: ubuntu-latest
     needs: build-and-push
-
+    env:
+      IMAGE_NAME: kelomi44/weddinglite   # <-- ADD THIS!
     steps:
       - name: Deploy on EC2
         uses: appleboy/ssh-action@v1.0.0
@@ -41,3 +31,4 @@ jobs:
             docker pull $IMAGE_NAME:latest
             docker stop static-site || true && docker rm static-site || true
             docker run -d --name static-site -p 80:80 $IMAGE_NAME:latest
+
