--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -5,7 +5,7 @@ on:
     branches: [main]
 
 env:
-  IMAGE_NAME: kelomi44/weddinglite
+  IMAGE_NAME: kelomi44/weddinglite  # This sets the global variable
 
 jobs:
   build-and-push:
@@ -29,6 +29,8 @@ jobs:
   deploy:
     runs-on: ubuntu-latest
     needs: build-and-push
+    env:  # ✅ Add this block
+      IMAGE_NAME: kelomi44/weddinglite
 
     steps:
       - name: Deploy on EC2
@@ -38,6 +40,7 @@ jobs:
           username: ${{ secrets.EC2_USER }}
           key: ${{ secrets.EC2_SSH_KEY }}
           script: |
-            docker pull $kelomi44/weddinglite:latest
+            echo "Pulling image: $IMAGE_NAME:latest"
+            docker pull $IMAGE_NAME:latest
             docker stop weddinglite || true && docker rm weddinglite || true
-            docker run -d --name weddinglite -p 80:80 $kelomi44/weddinglite:latest
+            docker run -d --name weddinglite -p 80:80 $IMAGE_NAME:latest
