--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -38,7 +38,7 @@ jobs:
           username: ${{ secrets.EC2_USER }}
           key: ${{ secrets.EC2_SSH_KEY }}
           script: |
-  docker pull ${{ env.IMAGE_NAME }}:latest
-  docker stop weddinglite || true
-  docker rm weddinglite || true
-  docker run -d --name weddinglite -p 3000:80 ${{ env.IMAGE_NAME }}:latest  # Map to 3000 instead of 80
+            docker pull ${{ env.IMAGE_NAME }}:latest
+            docker stop weddinglite || true
+            docker rm weddinglite || true
+            docker run -d --name weddinglite -p 3000:80 ${{ env.IMAGE_NAME }}:latest
